--- a/src/index.css
+++ b/src/index.css
@@ -118,3 +118,10 @@
     @apply bg-background text-foreground;
   }
 }
+
+.container {
+  max-width: 1210px;
+  width: 100%;
+  padding: 0 15px;
+  margin: 0 auto;
+}
